fix(style): fix default style for links, align links and buttons in table

--- a/packages/veui-theme-dls/link.less
+++ b/packages/veui-theme-dls/link.less
@@ -5,7 +5,6 @@
   color: @dls-link-font-color-normal;
   text-decoration: @dls-link-text-decoration;
   outline: none;
-  vertical-align: middle;
   .veui-transition(color);
 
   &:hover {
